--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
+    "build": "node migrations/run.js && node seeds/run.js",
     "migrate": "node migrations/run.js",
     "seed": "node seeds/run.js"
   },
